Closed
Bug 1315638
Opened 6 years ago
Closed 6 years ago
Crash in xul.dll@0x2c78630 | mozilla::mscom::MainThreadHandoff::FixArrayElements
Categories
(Core :: DOM: Content Processes, defect)
Tracking
()
RESOLVED
FIXED
mozilla52
Tracking | Status | |
---|---|---|
firefox52 | --- | fixed |
People
(Reporter: MarcoZ, Unassigned)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
This bug was filed from the Socorro interface and is report bp-ffc491ee-af55-4c76-87cb-2d7aa2161107. ============================================================= First time I'm seeing this crash. Updated from the 2016-11-03 to the 2016-11-06 Nightly build and see this and similar crashes when viewing crash reports with NVDA Next Snapshot running and accessibility therefore on. However, don't see accessibility itself in the stack, so am filing it against the general E10S component for now, but CC'ing aklotz. Tabs crash, and I had to disable E10S to even be able to file this bug. More reports: bp-dda64d7b-aba7-45b7-b4a8-bab932161107 bp-137c5a81-d72d-4c1b-b288-c692d2161107 bp-c223af2b-00ef-475b-a227-21ab32161107
Comment 1•6 years ago
|
||
This is fallout from bug 1311748. Looks ArrayData needs special annotations so that we know when a method's array is allocated by the server, thus requiring an extra level of indirection.
Comment hidden (mozreview-request) |
Comment hidden (mozreview-request) |
![]() |
||
Comment 4•6 years ago
|
||
mozreview-review |
Comment on attachment 8808368 [details] Bug 1315638: Modify MainThreadHandoff::FixArrayElements to be able to distinguish between outparams with different levels of indirection; https://reviewboard.mozilla.org/r/91186/#review91256
Attachment #8808368 -
Flags: review?(jmathies) → review+
Pushed by aklotz@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d5a021318c9a Modify MainThreadHandoff::FixArrayElements to be able to distinguish between outparams with different levels of indirection; r=jimm
Updated•6 years ago
|
Crash Signature: [@ xul.dll@0x2c78630 | mozilla::mscom::MainThreadHandoff::FixArrayElements] → [@ xul.dll@0x2c78630 | mozilla::mscom::MainThreadHandoff::FixArrayElements]
[@ xul.dll@0x2c76788 | mozilla::mscom::MainThreadHandoff::FixArrayElements]
[ @xul.dll@0x2c309e8 | mozilla::mscom::MainThreadHandoff::FixArrayElements]
Comment 6•6 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/d5a021318c9a
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox52:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in
before you can comment on or make changes to this bug.
Description
•